<resources>
    <string name="app_name">NPU Helper</string>
    <string name="weather_icon_description">Weather icon</string>
    <string name="connection_error_notice">Failed to connect with Internet</string>
    <string name="caiyun_support_notice">Weather Forcast provided by CMA and Caiyun Tech.</string>
    <string name="location_fail_notice">Failed to get your location by network.</string>
    <string name="unknown_temperature">Unknown</string>
    <string name="geo_parse_failed">Failed to get your location</string>
    <string name="arrivial_tag">To</string>
    <string name="youyi_campus_name">Youyi C.</string>
    <string name="changan_campus_name_full">Chang\'an Campus</string>
    <string name="youyi_campus_name_full">Youyi Campus</string>
    <string name="changan_campus_name">Chang\'an C.</string>
    <string name="left_time_label">Time left</string>
    <string name="depature_tag">From</string>
    <string name="shuttle_start_time">Next shuttle</string>
    <string name="minute_tag">min</string>
    <string name="no_left_shuttle_today">No Shuttle Left today</string>
    <string name="title_activity_main_menu">mainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NPU helper</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="npu_library">NPU Library</string>
    <string name="hour_tag">h</string>
    <string name="bus_list_title">Bus shuttle list</string>
    <string name="weekday_bus">weekday bus</string>
    <string name="bus_gone_label">Gone</string>
    <string name="bus_accessible_label">Pend</string>
    <string name="weekend_bus">weekend bus</string>
    <string name="ipv6_tv_label">IPv6 Free TV</string>
    <string name="bus_wait_label">Wait</string>
    <string name="back_label">Back</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_weather_detail">WeatherDetailActivity</string>
    <string name="pref_title_bus_notice_time">School shuttle reminder time</string>
    <string name="pref_title_location_selection">Location Selection</string>
    <string name="pref_key_location_selection">pref_key_location_selection</string>
    <string name="pref_summary_bus_notice_time">Which time app will label shuttle as waiting</string>
    <string name="shuttle_advanced_time">shuttle_advanced_time</string>
    <string name="campus_location_guide">Campus Location</string>
    <string name="pref_title_location_api_source">API Source</string>
    <string name="pref_location_api_source">pref_location_api_source</string>
    <string name="gitee_location_api_source">gitee</string>
    <string name="pref_title_data_save_mode">Mobile Data Save Mode</string>
    <string name="pref_description_data_save_mode">Only under Wi-Fi condition could app download pic, database, etc.</string>
    <string name="pref_key_data_save_mode">pref_key_data_save_mode</string>
    <string name="school_department_address_book">Dept. address book of U.</string>
    <string name="pref_title_phone_number_prefix">Phone prefix</string>
    <string name="pref_key_phone_number_prefix">pref_phone_number_prefix</string>
    <string name="school_calendar">School Calendar</string>
    <string name="pref_title_calendar_start_day">Start day of calendar</string>
    <string name="pref_key_calendar_start_day">pref_key_calendar_start_day</string>
    <string name="pref_key_show_accessible_book">pref_key_show_accessible_book</string>
    <string name="city_service">City Service</string>
    <string name="bus_service">Bus Services at Xi\'an City</string>
    <string name="guide_path">navigate</string>
    <string name="route_tabitem_text">route</string>
    <string name="bus_stop_tabitem_text">bus stop</string>
    <string name="auth_services">User Services</string>
    <string name="transaction_label">Campus Transaction</string>
    <string name="query_score">Score Query</string>
    <string name="campus_library">Library of University</string>
    <string name="select_show_campus_option">Select library of campus</string>
    <string name="follow_system_setting">Follow system</string>
    <string name="all_campus">All</string>
    <string name="show_access_book">Only show accessible book</string>
    <string name="apply">Apply</string>
    <string name="pref_key_book_select_campus">pref_key_book_select_campus</string>
    <string name="smart_show_books">Show book smartly</string>
    <string name="physical_exercise_department">Info of stadium in U.</string>
    <string name="npu_bbs">NPU BBS</string>
</resources>