<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/gitee_location_api_source"
        android:entries="@array/pref_array_location_api_source_entries"
        android:entryValues="@array/pref_array_location_api_source_entries_value"
        android:key="@string/pref_location_api_source"
        android:summary="%s"
        android:title="@string/pref_title_location_api_source" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_data_save_mode"
        android:summary="@string/pref_description_data_save_mode"
        android:title="@string/pref_title_data_save_mode" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue=""
        android:entries="@array/pref_array_phone_number_prefix_entries"
        android:entryValues="@array/pref_array_phone_number_prefix_entries_value"
        android:key="@string/pref_key_phone_number_prefix"
        android:summary="%s"
        android:title="@string/pref_title_phone_number_prefix" />
    <ListPreference
        android:defaultValue="mon"
        android:entries="@array/pref_array_calendar_start_day_entries"
        android:entryValues="@array/pref_array_calendar_start_day_entries_value"
        android:key="@string/pref_key_calendar_start_day"
        android:summary="%s"
        android:title="@string/pref_title_calendar_start_day" />
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
