<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="y"
        android:entries="@array/pref_array_location_selection_entries"
        android:entryValues="@array/pref_array_location_selection_entries_value"
        android:key="@string/pref_key_location_selection"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="%s"
        android:title="@string/pref_title_location_selection" />
    <ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="follow"
        android:entries="@array/pref_array_book_select_campus_entries"
        android:entryValues="@array/pref_array_book_select_campus_entries_value"
        android:key="@string/pref_key_book_select_campus"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="%s"
        android:title="@string/select_show_campus_option" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_show_accessible_book"
        android:title="@string/show_access_book" />
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

</PreferenceScreen>
