<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ipv6_free_tv"
            android:icon="@drawable/vector_drawable_calendar"
            android:title="@string/school_calendar" />
        <item
            android:id="@+id/nav_position_label"
            android:icon="@drawable/vector_drawable_position_label"
            android:title="@string/campus_location_guide" />
        <item
            android:id="@+id/nav_address_book"
            android:icon="@drawable/vector_drawable_address_book_icon"
            android:title="@string/school_department_address_book" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/city_service">
        <menu>
            <item
                android:id="@+id/nav_bus_services"
                android:icon="@drawable/vector_drawable_bus"
                android:title="@string/bus_service" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
