<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".campusLibrary.bookDetailShowOptionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/book_detail_show_campus_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/select_show_campus_option"
            android:textColor="@color/colorPureBlack"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/book_detail_option_chipGroup"
            style="@style/book_chip_dark_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/book_detail_show_campus_tag"
            app:layout_constraintTop_toBottomOf="@+id/book_detail_show_campus_tag"
            app:singleLine="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/book_detail_option_all"
                style="@style/book_chip_dark_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/all_campus"
                android:textAllCaps="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/book_detail_option_follow_system_setting"
                style="@style/book_chip_dark_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/follow_system_setting"
                android:textAllCaps="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/book_detail_option_youyi_campus"
                style="@style/book_chip_dark_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/youyi_campus_name_full"
                android:textAllCaps="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/book_detail_option_changan_campus"
                style="@style/book_chip_dark_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/changan_campus_name_full"
                android:textAllCaps="true" />

        </com.google.android.material.chip.ChipGroup>

        <Switch
            android:id="@+id/book_detail_show_all_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/show_access_book"
            app:layout_constraintEnd_toEndOf="@+id/book_detail_option_chipGroup"
            app:layout_constraintStart_toStartOf="@+id/book_detail_show_campus_tag"
            app:layout_constraintTop_toBottomOf="@+id/book_detail_option_chipGroup"
            app:theme="@style/book_option_switch" />

        <Switch
            android:id="@+id/book_detail_smart_show_all_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/smart_show_books"
            app:layout_constraintEnd_toEndOf="@+id/book_detail_show_all_book"
            app:layout_constraintStart_toStartOf="@+id/book_detail_show_all_book"
            app:layout_constraintTop_toBottomOf="@+id/book_detail_show_all_book"
            app:theme="@style/book_option_switch" />

        <Button
            android:id="@+id/book_detail_show_option_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/book_detail_show_all_book"
            app:layout_constraintStart_toStartOf="@+id/book_detail_show_all_book"
            app:layout_constraintTop_toBottomOf="@+id/book_detail_smart_show_all_book" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>