<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".schoolBusUtils.schoolBusListActivity">

    <TextView
        android:id="@+id/bus_item_departure_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/depature_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bus_departure_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/changan_campus_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/bus_item_departure_tag"
        app:layout_constraintTop_toBottomOf="@+id/bus_item_departure_tag" />

    <TextView
        android:id="@+id/bus_arrivial_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youyi_campus_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bus_item_arrivial_tag"
        app:layout_constraintTop_toTopOf="@+id/bus_departure_place" />

    <TextView
        android:id="@+id/bus_schedule_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pt_sans"
        android:text="@string/weekday_bus"
        android:textAppearance="@android:style/TextAppearance.Material.Notification"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/bus_arrivial_place"
        app:layout_constraintStart_toStartOf="@+id/bus_departure_place"
        app:layout_constraintTop_toBottomOf="@+id/bus_departure_place" />

    <TextView
        android:id="@+id/bus_item_arrivial_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/arrivial_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bus_item_departure_tag" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bus_schedule_type">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/bus_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bus_schedule_type" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>