<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/colorCityBusActionBar"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCityBusActionBar"
            android:fitsSystemWindows="true"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:expanded="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/bus_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/bus_service">

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:tabIndicatorColor="@color/colorCloud"
                app:tabSelectedTextColor="@color/colorCloud">

                <android.support.design.widget.TabItem
                    android:id="@+id/location_method_tabitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guide_path" />

                <android.support.design.widget.TabItem
                    android:id="@+id/route_tabitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route_tabitem_text" />

                <android.support.design.widget.TabItem
                    android:id="@+id/nearby_tabitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bus_stop_tabitem_text" />

            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/bus_nested_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_anchorGravity="top|start"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">



            <android.support.v4.view.ViewPager
                    android:id="@+id/bus_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_light_background">


            </android.support.v4.view.ViewPager>


        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>